feat: auto-update client version, server controls download URL